--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "mongoose": "^7.6.3",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "dotenv": "^16.3.1",
